# PairLingua

./: .env.example  .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  SUMMARY.md  app.js  chart_script.py  ci.yml  default.conf  deployment-guide  docker-compose.yml  index_1.html  nginx_1.conf  script.py  script_1.py  script_10.py  script_11.py  script_12.py  script_13.py  script_14.py  script_15.py  script_16.py  script_17.py  script_2.py  script_3.py  script_4.py  script_5.py  script_6.py  script_7.py  script_8.py  script_9.py  settings.json  style.css
backend/: .env  Dockerfile  alembic.ini  backend-README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  achievements.py  auth.py  router.py  study.py  users.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/models/: achievement.py  review.py  session.py  user_card.py
backend/app/schemas/: auth.py  study.py  user.py  word.py
backend/app/services/: auth_service.py  sm2_service.py  study_service.py
frontend/: Dockerfile  frontend-README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
nginx/: default.conf  nginx.conf
pairlingua/: .gitignore  CONTRIBUTING.md  Makefile  README.md  SUMMARY.md  docker-compose.yml
pairlingua/backend/: Dockerfile  requirements.txt
pairlingua/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
pairlingua/nginx/: nginx.conf
scripts/: init-db.sql  seed-data.sql  start.sh
(+68 files in other folders)
