[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nikita <nikita.dronov.a@gmail.com>"]
readme = "backend-README.md"
packages = [{ include = "app" }]


[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "==0.104.1"
uvicorn = {extras = ["standard"], version = "==0.24.0"}
pydantic = "==2.5.0"
pydantic-settings = "==2.1.0"
sqlalchemy = "==2.0.23"
alembic = "==1.13.0"
psycopg2-binary = "==2.9.9"
redis = "==5.0.1"
hiredis = "==2.2.3"
python-jose = {extras = ["cryptography"], version = "==3.3.0"}
passlib = "==1.7.4"
bcrypt = "==4.1.2"
python-multipart = "==0.0.6"
fastapi-mail = "==1.4.1"
httpx = "==0.25.2"
aiofiles = "==23.2.1"
python-dateutil = "==2.8.2"
email-validator = "==2.3.0"
prometheus-client = "==0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "==7.4.3"
pytest-asyncio = "==0.21.1"
pytest-cov = "==4.1.0"
